--- a/Login e Cadastro/CSS/cadastro.css
+++ b/Login e Cadastro/CSS/cadastro.css
@@ -93,7 +93,7 @@ body {
 }
 
 .texto-logo h1{
-    font-size: 4.5rem;
+    font-size: 70px;
     font-weight: 500;
 }
 
@@ -159,4 +159,49 @@ body {
 .campos a {
     text-decoration: none;
     color: #4EABE9;
+}
+
+@media screen and (max-width: 1328px){
+    .campos .entrada {
+        width: 280px;
+    }
+}
+
+@media screen and (max-width: 1366px){
+    .texto-logo h1{
+        font-size: 50px;
+    }
+}
+
+@media screen and (max-width: 920px){
+    .banner{
+        width: 0%;
+    }
+    
+    .formulario{
+        width: 100%;
+    }
+
+    .texto-logo img{
+        width: 150px;
+        margin-left: 30px;
+    }
+} 
+
+@media screen and (max-height: 700px){
+    .campos .buttons {
+        height: 12vh;
+    }
+}
+
+@media screen and (max-width: 420px){
+    .campos .entrada{
+        width: 250px;
+    }
+}
+
+@media screen and (max-width: 300px){
+    .campos .entrada{
+        width: 200px;
+    }
 }
