--- a/Login e Cadastro/CSS/login.css
+++ b/Login e Cadastro/CSS/login.css
@@ -45,6 +45,15 @@ body {
     cursor: pointer;
 }
 
+.form {
+    height: 90vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .formulario .container{
     height: 60vh;
     width: 30vw;
@@ -66,7 +75,7 @@ body {
 }
 
 .texto-logo img{
-    width: 22%;
+    width: 120px;
     margin-left: 30px;
 }
 
@@ -82,7 +91,7 @@ body {
 }
 
 .texto-logo h1{
-    font-size: 4.5rem;
+    font-size: 70px;
     font-weight: 500;
 }
 
@@ -160,8 +169,56 @@ body {
     color: #4EABE9;
 }
 
-.form .setaRetorno img {
-    position: relative;
-    top: 15vh;
-    left: -4.5vw;
+.form .setaRetorno{
+    display: flex;
+    width: 90%
+}
+
+.form .setaRetorno img:hover {
+    cursor: pointer;
+}
+
+@media screen and (max-width: 1328px){
+    .campos .entrada {
+        width: 280px;
+    }
+}
+
+@media screen and (max-width: 1366px){
+    .texto-logo h1{
+        font-size: 50px;
+    }
+}
+
+@media screen and (max-width: 920px){
+    .banner{
+        width: 0%;
+    }
+    
+    .formulario{
+        width: 100%;
+    }
+
+    .texto-logo img{
+        width: 150px;
+        margin-left: 30px;
+    }
+} 
+
+@media screen and (max-height: 700px){
+    .campos .buttons {
+        height: 12vh;
+    }
+}
+
+@media screen and (max-width: 420px){
+    .campos .entrada{
+        width: 250px;
+    }
+}
+
+@media screen and (max-width: 300px){
+    .campos .entrada{
+        width: 200px;
+    }
 }
