--- a/Login e Cadastro/CSS/login.css
+++ b/Login e Cadastro/CSS/login.css
@@ -148,6 +148,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    
 }
 
 .campos button {
@@ -162,6 +163,9 @@ body {
 
 .campos button:hover {
     cursor: pointer;
+    color: rgb(255, 255, 255);
+    font-size: 1.4rem;
+    transition: all .3s ease-in-out;
 }
 
 .campos a {
@@ -171,11 +175,11 @@ body {
 
 .form .setaRetorno{
     display: flex;
-    width: 90%
+    width: 90%;
 }
 
 .form .setaRetorno img:hover {
-    cursor: pointer;
+    cursor: pointer;   
 }
 
 @media screen and (max-width: 1328px){
