--- a/site/public/dashboard/css/geral.css
+++ b/site/public/dashboard/css/geral.css
@@ -2,20 +2,13 @@
 
 * {
     margin: 0;
-    font-family: 'Roboto', sans-serif;    
+    font-family: 'Roboto', sans-serif;
 }
 
-li {
-    list-style: none;
-}
-
-button {
-    cursor: pointer;
-}
-
-img{ 
-    width: 50px;
-    height: 50px;
+a {
+    text-decoration: none;
+    color: black;
+    font-weight: 400;
 }
 
 body {
@@ -23,16 +16,51 @@ body {
     width: 100%;
     height: 100vh;
     display: flex;
-    font-size: 15pt;
+}
+
+button {
+    cursor: pointer;
+}
+
+.caixa {
+    background-color: #D3D3D3;
+    border: solid 3px #4EABE9;
+    border-radius: 20px;
+    /* box-shadow: 2px 2px 10px #4ea5df75; */
 }
 
 .container {
     margin: auto;
-    width: 80%;
+    width: 90%;
+}
+
+li {
+    list-style: none;
+}
+
+.text-geral {
+    font-size: 22pt;
+}
+
+.right-side-window {
+    width: 85%;
+    height: 100vh;
+}
+
+.right-side-window nav {
+    height: 10%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.right-side-window nav .logo {
+    width: 120px;
+    height: 70%;
 }
 
 .left-side-window {
-    width: 20%;
+    width: 15%;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -56,11 +84,7 @@ body {
     align-items: center;
     justify-content: space-between;
     width: 90%;
-}
-
-.left-side-window .container .nav-itens {
-    height: 40%;
-    display: flex;
+    text-align: center;
 }
 
 .left-side-window .container .nav-itens {
@@ -69,15 +93,21 @@ body {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    font-weight: 600;
+    /* width: 125%; Isso vai ser util caso tenha o efeito de borda arredondada quando selecionado*/
+}
+
+.left-side-window .container .user-info img{
+    width: 40px;
+    height: 40px;
 }
 
 .left-side-window .container .nav-itens div {
     display: flex;
-    height: 25px;
     cursor: pointer;
 }
 
-.left-side-window .container button {
+.left-side-window .container a {
     font-size: 15pt;
     background-color: transparent;
     border: none;
