--- a/site/public/dashboard/css/geral.css
+++ b/site/public/dashboard/css/geral.css
@@ -3,6 +3,7 @@
 * {
     margin: 0;
     font-family: 'Roboto', sans-serif;
+    color: white;
 }
 
 a {
@@ -16,6 +17,7 @@ body {
     width: 100%;
     height: 100vh;
     display: flex;
+    background-color: #1a1a1a;
 }
 
 button {
@@ -23,7 +25,7 @@ button {
 }
 
 .caixa {
-    background-color: #D3D3D3;
+    background-color: #2C2B2B;
     border: solid 3px #4EABE9;
     border-radius: 20px;
     /* box-shadow: 2px 2px 10px #4ea5df75; */
@@ -67,7 +69,7 @@ li {
     align-items: center;
     border-right: #4EABE9 solid 3px;
     border-radius: 0px 30px 30px 0px;
-    background-color: #D3D3D3;
+    background-color: #2C2B2B;
     font-weight: 500;
 }
 
