att alinhamento texto

--- a/site/public/dashboard/css/computadores.css
+++ b/site/public/dashboard/css/computadores.css
@@ -135,6 +135,14 @@ body {
 
 .pcIndiv .box {
     display: flex;
+    height: 9vh;
+}
+
+.box div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
 }
 
 .pcIndiv .boxStatus {
